--- a/css/media.css
+++ b/css/media.css
@@ -98,7 +98,8 @@
         transition: all 0.3s ease-in-out;
     }
     .header-top__search-none {
-        display: none;
+        opacity: 0;
+        visibility: hidden;
         transition: all 0.3s ease-in-out;
     }
     .header-search-window {
@@ -149,9 +150,9 @@
     }
     .header-search-closed {
         display: none;
-        position: relative;
-        margin-right: 2px;
-        padding-left: 3px;
+        position: absolute;
+        top: 37px;
+        right: 52px;
         transition: all 0.3s ease-in-out;
     }
     .header-search-closed--is-open {
@@ -620,9 +621,8 @@
         width: 180px;
     }
     .header-search-closed {
-        position: absolute;
         top: 15px;
-        right: 15px;
+        right: 17px;
     }
     .search-closed {
         width: 15px;
