--- a/css/media.css
+++ b/css/media.css
@@ -9,11 +9,20 @@
     --border-color-dafault: #cacaca;
 }
 
-@media (max-width: 1350px) {
+@media (max-width: 1450px) {
+    .header-logo {
+        margin-right: 50px;
+    }
+    .header-bottom__item:not(:last-child) {
+        margin-right: 50px;
+    }
+}
+
+@media (max-width: 1230px) {
     .container {
         padding: 0 50px;
     }
-    /* --------------------------header-1350--------------- */
+    /* --------------------------header-1230--------------- */
     .header-top__container {
         justify-content: space-between;
         padding-top: 29px;
@@ -28,7 +37,7 @@
     .header-bottom {
         display: none;
     }
-    /* -----------------------burger-1350 */
+    /* -----------------------burger-1230 */
     .header-burger {
         display: block;
     }
@@ -75,14 +84,12 @@
         line-height: 64px;
     }
     .header-link {
-        display: inline-block;
+        justify-content: center;
         padding: 15.5px 89.2px;
+        width: 257px;
         border: 2px solid var(--border-color);
         border-radius: 100px;
         overflow: hidden;
-    }
-    .header-link:hover {
-        padding: 15.5px 87px;
     }
     .header-search-closed:active rect,
     .header-search-closed:hover rect {
@@ -92,7 +99,7 @@
         fill: var(--status-color-dark);
     }
     /* ---------------------------burger-end */
-    /* ---------------------------search-1350 */
+    /* ---------------------------search-1230 */
     .header-top__search {
         display: block;
         transition: all 0.3s ease-in-out;
@@ -160,7 +167,7 @@
         z-index: 550;
         transition: all 0.3s ease-in-out;
     }
-    /* -------------------------hero-1350------------------ */
+    /* -------------------------hero-1230------------------ */
     .hero-info {
         padding: 213px 0 137px 0;
         max-width: 656px;
@@ -192,7 +199,7 @@
     .slide-3 {
         background-image: url("../img/hero/slider-three-1325.jpg");
     }
-    /* -------------------------gallary-1350--------------- */
+    /* -------------------------gallary-1230--------------- */
     .gallary {
         padding-bottom: 77px;
     }
@@ -209,7 +216,7 @@
     .modal-info {
         padding: 15px 35px;
     }
-    /* -------------------------catalog-1350--------------- */
+    /* -------------------------catalog-1230--------------- */
     .catalog {
         padding-bottom: 34px;
     }
@@ -221,7 +228,7 @@
         -moz-columns: 2;
         columns: 2;
     }
-    /* -------------------------events-1350----------------- */
+    /* -------------------------events-1230----------------- */
     .events {
         padding-top: 35px;
         padding-bottom: 33px;
@@ -263,7 +270,7 @@
     .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
         margin: 0 var(--swiper-pagination-bullet-horizontal-gap, 7px);
     }
-    /* -------------------------projects-1350------------------- */
+    /* -------------------------projects-1230------------------- */
     .projects {
         padding-top: 34px;
     }
@@ -274,7 +281,7 @@
         padding: 28px 50px;
         height: 127px;
     }
-    /* -------------------------feedback-1350----------------- */
+    /* -------------------------feedback-1230----------------- */
     .feedback {
         padding-top: 43px;
         padding-bottom: 39px;
@@ -296,7 +303,7 @@
         margin-bottom: 15px;
         padding: 10.5px 41px;
     }
-    /* ------------------------footer-1350-------------------- */
+    /* ------------------------footer-1230-------------------- */
     .footer {
         padding: 40px 0;
     }
@@ -347,7 +354,7 @@
         min-height: 350px;
         padding: 13px 15px 30px 15px;
     }
-    /* ------------------------feetback-960----------------- */
+    /* ------------------------feedback-960----------------- */
     .feedback-form {
         flex-wrap: wrap;
         margin-bottom: 30px;
@@ -469,6 +476,9 @@
     .projects-descr {
         margin-bottom: 28px;
     }
+    .projects-button {
+        margin-left: 0;
+    }
     .project-sliders-descr {
         margin-bottom: 29px;
     }
@@ -487,6 +497,9 @@
         margin-right: 0;
         margin-bottom: 19px;
         width: 100%;
+    }
+    .feedback-adress {
+        margin-bottom: 32px;
     }
     .feedback-form-label {
         margin-bottom: 12px;
@@ -604,6 +617,7 @@
     }
     .header-link {
         padding: 10px 28px;
+        width: 115px;
         font-size: 12px;
         line-height: 16px;
     }
@@ -611,7 +625,7 @@
         justify-content: center;
         align-items: start;
         padding: 0 15px 19px 15px;
-        background-color: var(--background-color);
+        background-color: rgba(0, 0, 0, 0.9);
     }
     .header-search-input {
         margin-right: 9px;
@@ -939,6 +953,9 @@
     .modal {
         height: 550px;
     }
+    .modal-image {
+        width: 100vw;
+    }
     .projects__swipper-link {
         padding: 9px 43px;
         height: 65px;
@@ -958,7 +975,7 @@
         margin-left: 6px;
     }
     .projects {
-        padding-top: 23px;
+        padding-top: 25px;
     }
     .projects-button {
         margin-left: 4px;
