--- a/libs/custom-select.css
+++ b/libs/custom-select.css
@@ -70,7 +70,7 @@
     left: 0;
     right: 0;
     width: 300px;
-    height: 300px;
+    max-height: 300px;
     overflow-y: auto;
     z-index: 2;
     background: rgba(0, 0, 0, 0.6);
